--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   firebase_core: ^2.31.0
   firebase_auth: ^4.17.8
+  cloud_firestore: ^4.17.3
 
 dev_dependencies:
   flutter_test:
